2008-03-28  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Responding to feedback, added some comments, fixed up a few names, and
        clarified that "locals" always means all local variables, functions,
        and parameters.

2008-03-28  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.

        Added support for "this".
        
        Supply an implicit "this" value as the first argument to every function.
        Alias the "this" keyword to that argument.
        
        1% regression overall, 2.5% regression on empty function calls. Seems
        like a reasonable cost for now, since we're doing more work.
        (Eventually, we might decide to create a version of op_call specialized
        for a known null "this" value.)

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitCall):
        * VM/CodeGenerator.h:
        (KJS::CodeGenerator::CodeGenerator):
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * kjs/CommonIdentifiers.cpp:
        (KJS::CommonIdentifiers::CommonIdentifiers):
        * kjs/CommonIdentifiers.h:
        * kjs/nodes.cpp:
        (KJS::ThisNode::emitCode):
        (KJS::FunctionCallResolveNode::emitCode):
        * kjs/nodes.h:

2008-03-28  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff.

        Bug 18192: Squirrelfish needs support for break and continue
        <http://bugs.webkit.org/show_bug.cgi?id=18192>

        Added a loop context stack to the code generator to provide the
        correct jump labels for continue and goto.  Added logic to the
        currently implemented loop constructs to manage entry and exit
        from the loop contexts.  Finally, implemented codegen for break
        and continue (and a pass through for LabelNode)

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::pushLoopContext):